# BCQM_VII

./: .gitignore  CITATION.cff  PROVENANCE.md  README.md  pyproject.toml
configs/: quickcheck_full.yml  quickcheck_vglue_full.yml
configs_stage2/: bringup_cloth_W100_N8_n0p8.yml  bringup_cloth_W100_N8_n0p8_hits1.yml  bringup_cloth_W100_N8_n0p8_hits2.yml  ensemble_cloth_W100_N4N8_n0p4_0p8.yml  ensemble_cloth_W100_N4N8_n0p4_0p8_hits1.yml  ensemble_cloth_W100_N4N8_n0p4_0p8_hits1_x10_bins20.yml  ensemble_cloth_W100_N4N8_n0p4_0p8_hits2.yml  ensemble_cloth_W100_N4N8_n0p4_0p8_hits2_x10.yml  ensemble_cloth_W100_N4N8_n0p4_0p8_hits2_x10_bins10.yml  ensemble_cloth_W100_N4N8_n0p4_0p8_hits2_x10_bins20.yml  ensemble_cloth_W100_N4N8_n0p4_0p8_hits2_x5.yml  gate4_trace_hits1_x10_bins20_N4N8_n0p4.yml  gate4_trace_hits1_x10_bins20_N4N8_n0p8.yml  gate4_trace_hits1_x10_bins20_N8_n0p8.yml  gateA3_N16_hits1_x10_bins20_n0p8.yml  gateA3_N32_hits1_x10_bins20_n0p8.yml  gateA3_N32_hits1_x10_bins20_n0p8_repA.yml  gateA3_N32_hits1_x10_bins20_n0p8_repB.yml
csv/: README.md  cloth_bin_coarsening_summary_W100_x10.csv  cloth_metric_pairs_hits1_W100.csv  cloth_metric_pairs_hits2_W100.csv  cloth_metric_pairs_hits2_x10_W100.csv  cloth_metric_survival_hits1_W100.csv  cloth_metric_survival_hits2_W100.csv  cloth_survival_containment_hits1_W100.csv  cloth_survival_pairs_hits1_W100.csv  cloth_survival_pairs_hits2_W100.csv  cloth_survival_pairs_hits2_x10_W100.csv  cloth_survival_summary_hits1_W100.csv  cloth_survival_summary_hits2_W100.csv  cloth_survival_summary_hits2_x10_W100.csv  pivot_gates_1_2_3_summary.csv  (+2 more)
(+101 files in other folders)
