[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bcqm-vi-spacetime"
version = "0.1.0"
description = "BCQM VI primitives-only coupled lockstep/cross-link transition scaffold"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=2.0",
  "pandas>=2.2",
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
